Cache bust: Update HTML timestamp
- Add cache-busting comment to force GitHub Pages refresh
- Ensure new static content is served

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EST+6 — Work</title>
+    <!-- Cache bust: 2025-09-15-15:41 -->
     <style>
         * {
             margin: 0;
